# cc-switch-simple

./: AGENTS.md  Cargo.toml  README.en.md  README.md  README.zh-CN.md  cc-switch  install.sh
.github/workflows/: rust.yml
completions/: _cc-switch
docs/: install.md  notes.md  usage.md
profiles/: deepseek.json
src/: cli.rs  codex.rs  config.rs  lib.rs  main.rs  paths.rs
tests/: cli_behaviour.rs  codex_behaviour.rs  path_resolution.rs
