[package]
name = "cc-switch"
version = "0.1.3"
edition = "2024"
description = "Cross-platform Claude Code profile switcher"
license = "MIT"

[[bin]]
name = "cc-switch"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }

[dev-dependencies]
tempfile = "3.15"
